--- a/README.rdoc
+++ b/README.rdoc
@@ -110,7 +110,7 @@ or for the pure Ruby implementation
   # you must set both the mother and the father summary unless you want a single parent as the summary parents.
   person.select_mother_summary "KWQS-MOM"
   person.select_father_summary "KWQS-DAD"
-  communicator.save_person person
+  communicator.familytree_v2.save_person person
 
 == RDoc
 
